--- a/contacto.html
+++ b/contacto.html
@@ -8,7 +8,11 @@
 <body>
     <header>
        <h1>Contacto de hr turbo </h1>   
-
     </header>
+    <main>
+        <ul>
+            
+        </ul>
+    </main>
 </body>
 </html>
