--- a/contacto.html
+++ b/contacto.html
@@ -11,7 +11,9 @@
     </header>
     <main>
         <ul>
-            
+            <li> 
+                <p>Nombre y apellido: Raul Arnol</p>
+            </li>
         </ul>
     </main>
 </body>
