--- a/contacto.html
+++ b/contacto.html
@@ -13,6 +13,7 @@
         <ul>
             <li> 
                 <p>Nombre y apellido: Raul Arnol</p>
+                <p>Email: raularnol@yahoo.com</p>
             </li>
         </ul>
     </main>
