agregue etiqueta strong

--- a/contacto.html
+++ b/contacto.html
@@ -12,8 +12,8 @@
     <main>
         <ul>
             <li> 
-                <p>Nombre y apellido: Raul Arnol</p>
-                <p>Email: raularnol@yahoo.com</p>
+                <p><strong>Nombre y apellido:</strong> Raul Arnol</p>
+                <p><strong>Email:</strong> raularnol@yahoo.com</p>
             </li>
         </ul>
     </main>
