agregue etiqueta li

--- a/contacto.html
+++ b/contacto.html
@@ -11,10 +11,8 @@
     </header>
     <main>
         <ul>
-            <li> 
-                <p><strong>Nombre y apellido:</strong>Raul Arnol</p>
+            <li><p><strong>Nombre y apellido:</strong> Raul Arnol</p></li>
                 <p><strong>Email:</strong> raularnol@yahoo.com</p>
-            </li>
         </ul>
     </main>
 </body>
