agregue etiqueta li

--- a/contacto.html
+++ b/contacto.html
@@ -12,7 +12,7 @@
     <main>
         <ul>
             <li><p><strong>Nombre y apellido:</strong> Raul Arnol</p></li>
-                <p><strong>Email:</strong> raularnol@yahoo.com</p>
+            <li><p><strong>Email:</strong> raularnol@yahoo.com</p></li>
         </ul>
     </main>
 </body>
