--- a/contacto.html
+++ b/contacto.html
@@ -15,7 +15,8 @@
             <li><p><strong>Email:</strong> raularnol@yahoo.com</p></li>
         </ul>
         <ul>
-            <li></li>
+            <li> 
+                Teléfono:  <a href=""
         </ul>
     </main>
 </body>
