Se agrego numero de contacto

--- a/contacto.html
+++ b/contacto.html
@@ -16,7 +16,7 @@
         </ul>
         <ul>
             <li> 
-                Teléfono:  <a href=""
+                Teléfono:  <a href="tel:0299 15-530-8980">0299 15-530-8980"</a>
         </ul>
     </main>
 </body>
