--- a/contacto.html
+++ b/contacto.html
@@ -16,8 +16,10 @@
         </ul>
         <ul>
             <li> 
-                Teléfono:  <a href="tel:0299 15-530-8980">0299 15-530-8980"</a>
-            </li>
+                <strong> Téfono:</strong>  <a href="tel:0299 15-530-8980">0299 15-530-8980</a>
+            </li> 
+            <p>Ubicacion</p>
+
     </main>
 </body>
 </html>
