Agregando información al footer

--- a/productos.html
+++ b/productos.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <header>
-
+        <h1></h1>
     </header>
     <nav>
-        
+
     </nav>
     <main>
         <article>
@@ -21,7 +21,11 @@
         </section>
     </main>
     <footer>
-
+        <p>&copy; 2025 HR Turbos. Todos los derechos reservados.</p>
+        <p>
+            <a href="raularnol@yahoo.com">raularnol@yahoo.com</a> | 
+            <a href="tel:+5492995308980">+54 9 299 530-8980</a>
+        </p>
     </footer>
 
 </body>
