--- a/productos.html
+++ b/productos.html
@@ -7,11 +7,18 @@
 </head>
 <body>
     <header>
-        <h1></h1>
-    </header>
-    <nav>
+        <div class="logo">
+            <img src="galeria/logo.png" alt="HR Turbos">
+        </div>
 
-    </nav>
+        <nav>
+            <ul>
+                <li><a href="index.html" class="activo">Inicio</a></li>
+                <li><a href="productos.html">Productos</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
     <main>
         <article>
 
