Agregando servicios a lista de navegación en header

--- a/productos.html
+++ b/productos.html
@@ -14,8 +14,9 @@
         <nav>
             <ul>
                 <li><a href="index.html" class="activo">Inicio</a></li>
-                <li><a href="productos.html">Productos</a></li>
+                <li><a href="productos.html">Productos y Galeria</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="servicios.html">Servicios</a></li>
             </ul>
         </nav>
     </header>
