Agregando IDs a etiquetas HTML

--- a/productos.html
+++ b/productos.html
@@ -11,7 +11,7 @@
             <img src="galeria/logo.png" alt="HR Turbos">
         </div>
 
-        <nav>
+        <nav id="navegación">
             <ul>
                 <li><a href="index.html" class="activo">Inicio</a></li>
                 <li><a href="productos.html">Productos y Galeria</a></li>
@@ -20,7 +20,7 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main id="main">
         <article>
 
         </article>
@@ -28,7 +28,7 @@
 
         </section>
     </main>
-    <footer>
+    <footer id="footer">
         <p>&copy; 2025 HR Turbos. Todos los derechos reservados.</p>
         <p>
             <a href="raularnol@yahoo.com">raularnol@yahoo.com</a> | 
