Agregando artículos con imágenes y párrafos en main

--- a/productos.html
+++ b/productos.html
@@ -21,8 +21,13 @@
         </nav>
     </header>
     <main id="main">
-        <article>
-
+        <article class="taller">
+            <img src="galeria/IMG-20250823-WA0004.jpg" alt="vista1">
+            <p>Primer vista del taller desde arriba.</p>
+        </article>
+        <article class="taller">
+            <img src="galeria/IMG-20250823-WA0007.jpg" alt="vista2">
+            <p>Segunda vista del talller desde arriba.</p>
         </article>
         <section>
 
