Agregando etiqueta h1 en main

--- a/productos.html
+++ b/productos.html
@@ -20,7 +20,9 @@
             </ul>
         </nav>
     </header>
+
     <main id="main">
+        <h1> Galeria </h1>
         <article class="taller">
             <img src="galeria/IMG-20250823-WA0004.jpg" alt="vista1">
             <p>Primer vista del taller desde arriba.</p>
