Agregando etiqueta h1 en main

--- a/productos.html
+++ b/productos.html
@@ -32,7 +32,7 @@
             <p>Segunda vista del talller desde arriba.</p>
         </article>
         <section>
-
+            <h2> Productos </h2>
         </section>
     </main>
     <footer id="footer">
