Agregando imagen a main

--- a/productos.html
+++ b/productos.html
@@ -31,8 +31,13 @@
             <img src="galeria/IMG-20250823-WA0007.jpg" alt="vista2">
             <p>Segunda vista del talller desde arriba.</p>
         </article>
+        <article class="taller">
+            <img src="galeria/IMG-20250823-WA0008.jpg" alt="vista3">
+
+        </article>
         <section>
             <h2> Productos </h2>
+            <
         </section>
     </main>
     <footer id="footer">
