--- a/productos.html
+++ b/productos.html
@@ -33,7 +33,7 @@
         </article>
         <article class="taller">
             <img src="galeria/IMG-20250823-WA0008.jpg" alt="vista3">
-
+            <p> Así se ve nuestro lugar de trabajo </p>
         </article>
         <section>
             <h2> Productos </h2>
