Agregando imagen a etiqueta main

--- a/productos.html
+++ b/productos.html
@@ -35,6 +35,11 @@
             <img src="galeria/IMG-20250823-WA0008.jpg" alt="vista3">
             <p> Así se ve nuestro lugar de trabajo </p>
         </article>
+        <article class="taller">
+            <img src="galeria/IMG-20250823-WA0010.jpg" alt="vista4">
+            <p> Algunos de nuetsros productos </p>
+        </article>
+
         <section>
             <h2> Productos </h2>
             <
