Agregando imagen a etiqueta main

--- a/productos.html
+++ b/productos.html
@@ -37,7 +37,11 @@
         </article>
         <article class="taller">
             <img src="galeria/IMG-20250823-WA0010.jpg" alt="vista4">
-            <p> Algunos de nuetsros productos </p>
+            <p> Algunos de nuetsros productos</p>
+        </article>
+        <article class="taller">
+            <img src="galeria/Imagen de WhatsApp 2025-08-22 a las 18.05.34_57eb51da.jpg" alt="vista5">
+            <p> Reparación de turbo </p>
         </article>
 
         <section>
