Guardando imagenes en galeria

--- a/productos.html
+++ b/productos.html
@@ -46,7 +46,8 @@
 
         <section>
             <h2> Productos </h2>
-            <
+            <img src="galeria/turbo2_ford_ranger_3.2.jpg" alt="turbo1">
+            <p> Turbo Ford Ranger 3.2</p>
         </section>
     </main>
     <footer id="footer">
