--- a/productos.html
+++ b/productos.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="galeria/logo.png" alt="HR Turbos">
+            <img src="galeria/logo.png" alt="HR Turbos" height="360" width="700">
         </div>
 
         <nav id="navegación">
@@ -21,26 +21,28 @@
         </nav>
     </header>
 
+    <h1>Peoductos y galeria</h1>
+
     <main id="main">
-        <h1> Galeria </h1>
+        <h2> Galeria </h2>
         <article class="taller">
-            <img src="galeria/IMG-20250823-WA0004.jpg" alt="vista1">
+            <img src="galeria/IMG-20250823-WA0004.jpg" alt="vista1" height="640" width="360">
             <p>Primer vista del taller desde arriba.</p>
         </article>
-        <article class="taller">
-            <img src="galeria/IMG-20250823-WA0007.jpg" alt="vista2">
-            <p>Segunda vista del talller desde arriba.</p>
-        </article>
-        <article class="taller">
-            <img src="galeria/IMG-20250823-WA0008.jpg" alt="vista3">
+         <article class="taller">
+            <img src="galeria/IMG-20250823-WA0008.jpg" alt="vista3" height="640" width="360">
             <p> Así se ve nuestro lugar de trabajo </p>
         </article>
         <article class="taller">
-            <img src="galeria/IMG-20250823-WA0010.jpg" alt="vista4">
+            <img src="galeria/IMG-20250823-WA0007.jpg" alt="vista2" height="360" width="640">
+            <p>Segunda vista del talller desde arriba.</p>
+        </article>
+        <article class="taller">
+            <img src="galeria/IMG-20250823-WA0010.jpg" alt="vista4" height="360" width="640">
             <p> Algunos de nuestros productos</p>
         </article>
         <article class="taller">
-            <img src="galeria/Imagen de WhatsApp 2025-08-22 a las 18.05.34_57eb51da.jpg" alt="vista5">
+            <img src="galeria/Imagen de WhatsApp 2025-08-22 a las 18.05.34_57eb51da.jpg" alt="vista5" height="360" width="640">
             <p> Reparación de turbo </p>
         </article>
 
