Agregando etiquetas div a section

--- a/productos.html
+++ b/productos.html
@@ -48,7 +48,6 @@
 
         <section>
             <h2> Productos </h2>
-
             <img src="galeria/turbo2_ford_ranger_3.2.jpg" alt="turbo1" height="250" width="240">
             <p> Turbo Ford Ranger 3.2</p>
             <img src="galeria/turbo_chevrolet_s10_2.8.jpg" alt="turbo2" height="250" width="250">
@@ -61,6 +60,12 @@
             <p> Turbo Toyota Hilux 3.0 </p>
             <img src="galeria/turbo_volkswagen_vento2.0.jpg" alt="turbo6" height="250" width="300">
             <p> Turbo Volkswagen Vento 2.0 </p>
+        </section>
+
+        <section>
+            <div class="animacion-turbo1"></div>
+            <div class="animacion-turbo2"></div>
+            <div class="animacion-turbo3"></div>
         </section>
     </main>
     <footer id="footer">
