--- a/productos.html
+++ b/productos.html
@@ -21,10 +21,10 @@
         </nav>
     </header>
 
-    <h1>Peoductos y galeria</h1>
+    <h1>Productos y galería</h1>
 
     <main id="main">
-        <h2> Galeria </h2>
+        <h2> Galería </h2>
         <article class="taller">
             <img src="galeria/IMG-20250823-WA0004.jpg" alt="vista1" height="640" width="360">
             <p>Primer vista del taller desde arriba.</p>
