--- a/servicios.html
+++ b/servicios.html
@@ -6,6 +6,21 @@
     <title>servicios</title>
 </head>
 <body>
+        <header>
+        <div class="logo">
+            <img src="galeria/logo.png" alt="HR Turbos">
+        </div>
+
+        <nav id="navegación">
+            <ul>
+                <li><a href="index.html" class="activo">Inicio</a></li>
+                <li><a href="productos.html">Productos y Galeria</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="servicios.html">Servicios</a></li>
+            </ul>
+        </nav>
+    </header>
+
     
 </body>
 </html>
