--- a/servicios.html
+++ b/servicios.html
@@ -7,6 +7,9 @@
 </head>
 <body>
         <header>
+        <div class="logo">
+            <img src="galeria/logo.png" alt="HR Turbos">
+        </div>
 
         <nav id="navegación">
             <ul>
