Agregando etiqueta <h1> en body

--- a/servicios.html
+++ b/servicios.html
@@ -19,8 +19,8 @@
                 <li><a href="servicios.html">Servicios</a></li>
             </ul>
         </nav>
-
     </header>
+    <h1>Taller Mecanico " HR turbos"</h1>
 
     
 </body>
