Corrigiendo errores en main

--- a/servicios.html
+++ b/servicios.html
@@ -20,42 +20,43 @@
             </ul>
         </nav>
     </header>
-    <h1>Taller Mecanico " HR turbos"</h1>
-     <p>Centrado en la reparacion y venta de turbos</p>
-      <h2>Nuestra Historia</h2>
-  <p>
-    El negocio nació gracias a la experiencia, la dedicación y el esfuerzo de su fundador. 
-    Durante casi tres décadas trabajó en la empresa RTS, adonde ingresó a fines de los años 80. 
-    Allí adquirió gran parte de sus conocimientos, pero también vivió de cerca las dificultades 
-    económicas que con el tiempo afectaron a la compañía. Los recortes salariales y la reducción 
-    de horas de trabajo hicieron que empezara a pensar en alternativas para asegurar su futuro.
-  </p>
-  <p>
-    Con paciencia y visión, comenzó a comprar maquinarias poco a poco: algunas en cuotas, otras 
-    con ayuda de tarjetas, e incluso trabajaba en su casa con esos equipos para terminar encargos 
-    de la empresa. Aunque las condiciones laborales no eran las mejores, nunca perdió la determinación 
-    de crecer.
-  </p>
-  <p>
-    En el año 2018, RTS cerró definitivamente sus puertas. Después de casi 30 años de servicio, recibió 
-    una indemnización que le permitió completar la compra de las máquinas que le faltaban. Ese fue el 
-    punto de partida para iniciar su propio taller, primero trabajando desde su hogar.
-  </p>
-  <p>
-    El boca a boca hizo el resto: clientes que lo conocían de su etapa en RTS empezaron a buscarlo, 
-    confiando en su experiencia y en la calidad de su trabajo. La demanda creció tanto que en poco tiempo 
-    tuvo que alquilar un lugar más grande, dando así el primer gran paso hacia lo que hoy es el Taller Mecánico.
-  </p>
-  <p>
-    Más allá de lo aprendido en la empresa, lo que realmente lo impulsó a independizarse fueron las malas 
-    condiciones que había soportado durante años: bajos salarios, falta de seguridad y exigencias en 
-    situaciones climáticas adversas. Todo eso se transformó en motivación para crear algo propio, con esfuerzo, 
-    dedicación y perseverancia.
-  </p>
-  <p>
-    Así fue como una situación difícil se convirtió en una oportunidad, y como nació un taller que hoy sigue 
-    creciendo, manteniendo el compromiso de brindar confianza, calidad y un servicio cercano a cada cliente.
-  </p>
+ <main>
+        <h1>Taller Mecánico "HR Turbos"</h1>
+        <p>Centrado en la reparación y venta de turbos.</p>
+
+        <section id="historia">
+            <h2>Nuestra Historia</h2>
+            <article>
+                <p>
+                    El negocio nació gracias a la experiencia, la dedicación y el esfuerzo de su fundador. 
+                    Durante casi tres décadas trabajó en la empresa RTS, adonde ingresó a fines de los años 80. 
+                    Allí adquirió gran parte de sus conocimientos, pero también vivió de cerca las dificultades 
+                    económicas que con el tiempo afectaron a la compañía.
+                </p>
+                <p>
+                    Con paciencia y visión, comenzó a comprar maquinarias poco a poco: algunas en cuotas, otras 
+                    con ayuda de tarjetas, e incluso trabajaba en su casa con esos equipos para terminar encargos 
+                    de la empresa.
+                </p>
+                <p>
+                    En el año 2018, RTS cerró definitivamente sus puertas. Después de casi 30 años de servicio, recibió 
+                    una indemnización que le permitió completar la compra de las máquinas que le faltaban.
+                </p>
+                <p>
+                    El boca a boca hizo el resto: clientes que lo conocían de su etapa en RTS empezaron a buscarlo, 
+                    confiando en su experiencia y en la calidad de su trabajo.
+                </p>
+                <p>
+                    Más allá de lo aprendido en la empresa, lo que realmente lo impulsó a independizarse fueron las malas 
+                    condiciones que había soportado durante años.
+                </p>
+                <p>
+                    Así fue como una situación difícil se convirtió en una oportunidad, y como nació un taller que hoy sigue 
+                    creciendo, manteniendo el compromiso de brindar confianza, calidad y un servicio cercano a cada cliente.
+                </p>
+            </article>
+        </section>
+
 
     
 </body>
