Agregando etiqueta section al main

--- a/servicios.html
+++ b/servicios.html
@@ -56,8 +56,13 @@
                 </p>
             </article>
         </section>
-
-
-    
+    <section id="servicios">
+            <h2>Servicios</h2>
+            <ul>
+                <li>Reparación y venta de turbos</li>
+                <li>Extracción y colocación de turbo (con turno)</li>
+                <li>Cambio de aceite y filtro al vehículo al extraer o colocar el turbo</li>
+            </ul>
+        </section>
 </body>
 </html>
