--- a/servicios.html
+++ b/servicios.html
@@ -56,7 +56,7 @@
                 </p>
             </article>
         </section>
-    <section id="servicios">
+        <section id="servicios">
             <h2>Servicios</h2>
             <ul>
                 <li>Reparación y venta de turbos</li>
@@ -64,5 +64,6 @@
                 <li>Cambio de aceite y filtro al vehículo al extraer o colocar el turbo</li>
             </ul>
         </section>
-</body>
+    </main>
+    </body>
 </html>
