Agregando contenido al section

--- a/servicios.html
+++ b/servicios.html
@@ -64,6 +64,31 @@
                 <li>Cambio de aceite y filtro al vehículo al extraer o colocar el turbo</li>
             </ul>
         </section>
+        <section id="diagnostico">
+            <h2>Diagnóstico y Presupuesto</h2>
+            <p>
+                Antes de dar un precio, realizamos un chequeo completo del turbo. 
+                El proceso incluye:
+            </p>
+            <ul>
+                <li>Desarmado y limpieza del turbo.</li>
+                <li>Descarbonización para evaluar el estado y detectar problemas.</li>
+                <li>Evaluación del diagnóstico para determinar el presupuesto.</li>
+            </ul>
+            <p>
+                Una vez que el cliente aprueba el presupuesto, se procede a la reparación. 
+                Si el turbo no puede repararse, se reemplaza el <strong>CCR (cuerpo central rotativo)</strong> 
+                o el turbo completo.
+            </p>
+            <p>
+                Durante el proceso, al vehículo se le realiza cambio de aceite y filtro. 
+                Al armar el turbo, este se <strong>balancea y calibra</strong> para asegurar su correcto funcionamiento.
+            </p>
+            <p>
+                También realizamos un escaneo del vehículo para detectar fallas relacionadas con el turbo y se informa al cliente. 
+                No realizamos reparaciones que no estén relacionadas con el turbo.
+            </p>
+        </section>
     </main>
     </body>
 </html>
