--- a/contacto.html
+++ b/contacto.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contactos</title>
+    <title>Contacto</title>
 </head>
 <body>
-    <header>
+    <header class="titulo">
        <h1>Contacto de hr turbo </h1>   
     </header>
     <main>
