--- a/contacto.html
+++ b/contacto.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <header class="titulo">
-       <h1>Contacto de hr turbo </h1>   
+       <h1>CONTACTANOS</h1>   
+       <p></p>
+
     </header>
     <main>
         <ul>
