--- a/contacto.html
+++ b/contacto.html
@@ -8,7 +8,7 @@
 <body>
     <header class="titulo">
        <h1>CONTACTANOS</h1>   
-       <p></p>
+       <p>Necesitas algun arreglo o mejora en tu vehiculo? contactate con nosotros a traves de estos medios</p>
 
     </header>
     <main>
