Agregando etiqueta section

--- a/contacto.html
+++ b/contacto.html
@@ -9,15 +9,15 @@
     <header class="titulo">
        <h1>CONTACTANOS</h1>   
        <p>Necesitas algun arreglo o mejora en tu vehiculo? contactate con nosotros a traves de estos medios</p>
-
     </header>
     <main>
+        <section class="contact">   
         <ul>
             <li><p><strong>Nombre y apellido:</strong> Raul Arnol</p></li>
             <li><p><strong>Email:</strong> raularnol@yahoo.com</p></li>
         </ul>
         <ul>
-            <li> 
+            <li>
                 <strong> Téfono:</strong>  <a href="tel:0299 15-530-8980">0299 15-530-8980</a>
             </li> 
             <p>Ubicacion</p>
