Agregando etiqueta div

--- a/contacto.html
+++ b/contacto.html
@@ -12,6 +12,8 @@
     </header>
     <main>
         <section class="contact">   
+        <div class="contact-box">
+            <img src="proyecto_HR\galeria\ubicacion.jpg" alt="imagen de contacto" width="400" height="300">
         <ul>
             <li><p><strong>Nombre y apellido:</strong> Raul Arnol</p></li>
             <li><p><strong>Email:</strong> raularnol@yahoo.com</p></li>
