--- a/contacto.html
+++ b/contacto.html
@@ -8,12 +8,13 @@
 <body>
     <header class="titulo">
        <h1>CONTACTANOS</h1>   
-       <p>Necesitas algun arreglo o mejora en tu vehiculo? contactate con nosotros a traves de estos medios</p>
+       <p>Necesitas algun arreglo o mejora en tu vehiculo? Contactate con nosotros a traves de estos medios</p>
     </header>
     <main>
         <section class="contact">   
         <div class="contact-box">
             <img src="proyecto_HR\galeria\ubicacion.jpg" alt="imagen de contacto" width="400" height="300">
+            <h2>Visitanos</h2>
         <ul>
             <li><p><strong>Nombre y apellido:</strong> Raul Arnol</p></li>
             <li><p><strong>Email:</strong> raularnol@yahoo.com</p></li>
