Modificando etiqueta li

--- a/contacto.html
+++ b/contacto.html
@@ -18,12 +18,11 @@
         <ul>
             <li><p><strong>Nombre y apellido:</strong> Raul Arnol</p></li>
             <li><p><strong>Email:</strong> raularnol@yahoo.com</p></li>
+            <li><p><strong> Telefono:</strong>  <a href="tel:0299 15-530-8980">0299 15-530-8980</a></p></li> 
+            <li><p><strong>Ubicacion:</strong> <a href="https://maps.app.goo.gl/KeopkTEWn9oVWJLi9">Ubicacion</a></li></p>
         </ul>
-        <ul>
-            <li>
-                <strong> Téfono:</strong>  <a href="tel:0299 15-530-8980">0299 15-530-8980</a>
-            </li> 
-            <p>Ubicacion</p>
+        </div>
+        </section>
 
     </main>
 </body>
