--- a/contacto.html
+++ b/contacto.html
@@ -6,9 +6,23 @@
     <title>Contacto</title>
 </head>
 <body>
+    <header>
+        <div class="logo">
+            <img src="galeria/logo.png" alt="HR Turbos">
+        </div>
+
+        <nav id="navegación">
+            <ul>
+                <li><a href="index.html" class="activo">Inicio</a></li>
+                <li><a href="productos.html">Productos y Galeria</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="servicios.html">Servicios</a></li>
+            </ul>
+        </nav>
+    </header>
     <header class="titulo">
        <h1>CONTACTANOS</h1>   
-       <p>Necesitas algun arreglo o mejora en tu vehiculo? Contactate con nosotros a traves de estos medios</p>
+       <p>Necesitas algun arreglo o mejora en tu vehiculo? Contactate con nosotros a traves de estos medios.</p>
     </header>
     <main>
         <section class="contact">   
@@ -23,7 +37,6 @@
         </ul>
         </div>
         </section>
-
     </main>
 </body>
 </html>
