Agregando etiqueta footer

--- a/contacto.html
+++ b/contacto.html
@@ -26,14 +26,15 @@
         <div class="contact-box">
             <img src="proyecto_HR\galeria\ubicacion.jpg" alt="imagen de contacto" width="400" height="300">
             <h2>Visitanos</h2>
-        <ul>
-            <li><p><strong>Nombre y apellido:</strong> Raul Arnol</p></li>
-            <li><p><strong>Email:</strong> raularnol@yahoo.com</p></li>
-            <li><p><strong> Telefono:</strong>  <a href="tel:0299 15-530-8980">0299 15-530-8980</a></p></li> 
-            <li><p><strong>Ubicacion:</strong> <a href="https://maps.app.goo.gl/KeopkTEWn9oVWJLi9">Ubicacion</a></li></p>
-        </ul>
         </div>
         </section>
     </main>
+    <footer id="footer">
+        <p>&copy; 2025 HR Turbos. Todos los derechos reservados.</p>
+        <p>
+            <a href="raularnol@yahoo.com">raularnol@yahoo.com</a> | 
+            <a href="tel:+5492995308980">+54 9 299 530-8980</a>
+        </p>
+    </footer>
 </body>
 </html>
