Abriendo etiqueta Div

--- a/contacto.html
+++ b/contacto.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es-arg">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,13 +22,21 @@
        <h1>CONTACTANOS</h1>   
        <p>Necesitas algun arreglo o mejora en tu vehiculo? Contactate con nosotros a traves de estos medios.</p>
     <main>
-        <section class="contact">   
+        <section class="">   
         <div class="contact-box">
             <img src="proyecto_HR\galeria\ubicacion.jpg" alt="imagen de contacto" width="400" height="300">
             <h2>Visitanos</h2>
         </div>
         </section>
     </main>
+    <div class="tel">
+
+
+
+
+        
+    </div>
+
     <footer id="footer">
         <p>&copy; 2025 HR Turbos. Todos los derechos reservados.</p>
         <p>
