Agregando imagen del icono telefono

--- a/contacto.html
+++ b/contacto.html
@@ -30,11 +30,13 @@
         </section>
     </main>
     <div class="tel">
+        <img src="galeria/tel-icono.htm" alt="telefono">
 
 
 
 
-        
+
+
     </div>
 
     <footer id="footer">
