Agregando numero de contacto

--- a/contacto.html
+++ b/contacto.html
@@ -31,7 +31,8 @@
     </main>
     <div class="tel">
         <img src="galeria/tel-icono.htm" alt="telefono">
-
+         <h3>Llamanos:</h3>
+         <p><a href="+54  0299 15-530-8980"> 0299 15-530-8980</a></p>
 
 
 
