--- a/contacto.html
+++ b/contacto.html
@@ -33,8 +33,9 @@
         <img src="galeria/tel-icono.htm" alt="telefono">
          <h3>Llamanos:</h3>
          <p><a href="+54  0299 15-530-8980"> 0299 15-530-8980</a></p>
-
-
+         <p>Ubicación:AGL, Int. Nordenstrom 925</p>
+    </div>     
+           
 
 
 
