Abriendo etiqueta section

--- a/contacto.html
+++ b/contacto.html
@@ -35,6 +35,11 @@
          <p><a href="+54  0299 15-530-8980"> 0299 15-530-8980</a></p>
          <p>Ubicación:AGL, Int. Nordenstrom 925</p>
     </div>     
+    <section class="mapa">
+        <iframe src="https://maps.app.goo.gl/HbpQ5SX8qBhmkanp9"
+         width="100%" height="300" style="border: 0;"
+         allowfullscreen="" loading="lazy" allowfullscreen="" loading="lazy">Ubicación</iframe>
+    </section>
            
 
 
