--- a/productos.html
+++ b/productos.html
@@ -21,7 +21,7 @@
         </nav>
     </header>
 
-    <h1>Peoductos y galeria</h1>
+    <h1>Productos y galeria</h1>
 
     <main id="main">
         <h2> Galeria </h2>
@@ -35,7 +35,7 @@
         </article>
         <article class="taller">
             <img src="galeria/IMG-20250823-WA0007.jpg" alt="vista2" height="360" width="640">
-            <p>Segunda vista del talller desde arriba.</p>
+            <p>Segunda vista del taller desde arriba.</p>
         </article>
         <article class="taller">
             <img src="galeria/IMG-20250823-WA0010.jpg" alt="vista4" height="360" width="640">
@@ -62,7 +62,7 @@
             <p> Turbo Volkswagen Vento 2.0 </p>
         </section>
 
-        <section>
+        <section id="animaciones">
             <div class="animacion-turbo1"></div>
             <div class="animacion-turbo2"></div>
             <div class="animacion-turbo3"></div>
