Modificando imagenes de ubicacion

--- a/contacto.html
+++ b/contacto.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es-arg">
+<html lang="Es-ar">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,7 +24,7 @@
     <main>
         <section class="">   
         <div class="contact-box">
-            <img src="proyecto_HR\galeria\ubicacion.jpg" alt="imagen de contacto" width="400" height="300">
+            <img src="galeria/ubicacion.jpeg" alt="imagen de contacto" width="400" height="300">
             <h2>Visitanos</h2>
         </div>
         </section>
