Modificando imagen de telefono

--- a/contacto.html
+++ b/contacto.html
@@ -22,15 +22,16 @@
        <h1>CONTACTANOS</h1>   
        <p>Necesitas algun arreglo o mejora en tu vehiculo? Contactate con nosotros a traves de estos medios.</p>
     <main>
-        <section class="">   
+        <section class="ubi">   
         <div class="contact-box">
-            <img src="galeria/ubicacion.jpeg" alt="imagen de contacto" width="400" height="300">
             <h2>Visitanos</h2>
+            <img src="galeria/ubicacion.jpeg" alt="imagen de contacto" width="400" height="300">
+           
         </div>
         </section>
     </main>
     <div class="tel">
-        <img src="galeria/tel-icono.htm" alt="telefono">
+        <img src="galeria/icono-telefono-rojo-png-whatsapp-logo-red-11562862504g1ozq1wfuy.png" alt="telefono" width="80" height="80">
          <h3>Llamanos:</h3>
          <p><a href="+54  0299 15-530-8980"> 0299 15-530-8980</a></p>
          <p>Ubicación:AGL, Int. Nordenstrom 925</p>
