Agregando etiqueta main con atributo class

--- a/contacto.html
+++ b/contacto.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
+    <link rel="stylesheet" href="contactos.css">
 </head>
 <body>
     <header>
@@ -22,8 +23,9 @@
     </header>
        <h1>CONTACTANOS</h1>
        <p>Necesitas algun arreglo o mejora en tu vehiculo? Contactate con nosotros a traves de estos medios.</p>
-    <main>
+    <main >
         <section clas="ubi-con">
+
         <div class="ubi">
             <h3>Visítanos</h3>
             <img src="galeria/ubicacion.jpeg" alt="Ubicación" width="80" height="80">
