--- a/contacto.html
+++ b/contacto.html
@@ -23,8 +23,8 @@
     </header>
        <h1>CONTACTANOS</h1>
        <p>Necesitas algun arreglo o mejora en tu vehiculo? Contactate con nosotros a traves de estos medios.</p>
-    <main >
-        <section clas="ubi-con">
+    <main class="grid-container">
+    
 
         <div class="ubi">
             <h3>Visítanos</h3>
