--- a/contacto.html
+++ b/contacto.html
@@ -35,6 +35,7 @@
     <div class="tel">
         <h3>Llamanos</h3>
         <img src="galeria/icono-telefono-rojo-png-whatsapp-logo-red-11562862504g1ozq1wfuy.png" alt="telefono" width="80" height="80">
+         <button class="boton llamar">
          <p><a href="+54  0299 15-530-8980"> 0299 15-530-8980</a></p>
     </div>  
     
