Cerrando etiqueta Button

--- a/contacto.html
+++ b/contacto.html
@@ -44,6 +44,7 @@
             <img src="galeria/617616eaa2cb8cdf5fe02dfde88632de.jpg" alt="Correo" width="80" height="80">
             <button class="boton le">
             <p><a href="raularnol@yahoo.com">raularnol@yahoo.com</a></p>
+            </button>
         </div>
        
     <section class="mapa">
