--- a/contacto.html
+++ b/contacto.html
@@ -24,7 +24,7 @@
        <h1>CONTACTANOS</h1>
        <p>Necesitas algun arreglo o mejora en tu vehiculo? Contactate con nosotros a traves de estos medios.</p>
     <main class="grid-container">
-        <div class="ubi">
+        <div class="contacto">
             <h3>Visítanos</h3>
             <img src="galeria/ubicacion.jpeg" alt="Ubicación" width="80" height="80">
             <p>AGL, Int. Nordenstrom 925</p> 
@@ -39,7 +39,7 @@
         </div>  
     
      
-        <div class="email">
+        <div class="contacto">
             <h3>Escríbinos</h3>
             <img src="galeria/617616eaa2cb8cdf5fe02dfde88632de.jpg" alt="Correo" width="80" height="80">
             <button class="boton le">
