--- a/contacto.html
+++ b/contacto.html
@@ -34,14 +34,14 @@
         <div class="contacto">
          <h3>Llamanos</h3>
             <img src="galeria/icono-telefono-rojo-png-whatsapp-logo-red-11562862504g1ozq1wfuy.png" alt="telefono" width="80" height="80">
-                <button class="boton le">
+                <button class="boton-le">
                        <p><a href="+54  0299 15-530-8980"> 0299 15-530-8980</a></p>
                 </button>
         </div>    
         <div class="contacto">
          <h3>Escríbinos</h3>
             <img src="galeria/617616eaa2cb8cdf5fe02dfde88632de.jpg" alt="Correo" width="80" height="80">
-               <button class="boton le">
+               <button class="boton-le">
                       <p><a href="raularnol@yahoo.com">raularnol@yahoo.com</a></p>
               </button>
         </div>
