Añadiendo etiqueta A en html contacto

--- a/contacto.html
+++ b/contacto.html
@@ -29,7 +29,7 @@
         <div class="contacto">
             <h3>Visítanos</h3>
             <img src="galeria/ubicacion.jpeg" alt="Ubicación" width="80" height="80">
-            <p>AGL, Int. Nordenstrom 925</p> 
+            <p><a href="Int. Nordenstrom 925">Int. Nordenstrom 925</a></p>
         </div>
         <div class="contacto">
          <h3>Llamanos</h3>
