Añadiendo etiqueta Button en html contacto

--- a/contacto.html
+++ b/contacto.html
@@ -29,6 +29,7 @@
         <div class="contacto">
             <h3>Visítanos</h3>
             <img src="galeria/ubicacion.jpeg" alt="Ubicación" width="80" height="80">
+            <button class="boton-le">
             <p><a href="Int. Nordenstrom 925">Int. Nordenstrom 925</a></p>
         </div>
         <div class="contacto">
