Cerrando etiqueta Button en html contacto

--- a/contacto.html
+++ b/contacto.html
@@ -30,7 +30,8 @@
             <h3>Visítanos</h3>
             <img src="galeria/ubicacion.jpeg" alt="Ubicación" width="80" height="80">
             <button class="boton-le">
-            <p><a href="Int. Nordenstrom 925">Int. Nordenstrom 925</a></p>
+                <p><a href="Int. Nordenstrom 925">Int. Nordenstrom 925</a></p>
+            </button>
         </div>
         <div class="contacto">
          <h3>Llamanos</h3>
