Finalizando modificacion del tamaño de imagenes en html contacto

--- a/contacto.html
+++ b/contacto.html
@@ -1,48 +1,42 @@
-
 <!DOCTYPE html>
-<html lang="Es-ar">
+<html lang="es-arg">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto</title>
+    <title>contacto</title>
     <link rel="stylesheet" href="contactos.css">
 </head>
 <body>
     <header>
-        <div class="logo">
-            <img src="galeria/logo.png" alt="HR Turbos">
-        </div>
+    
 
-        <nav id="navegación">
-            <ul>
-                <li><a href="index.html" class="activo">Inicio</a></li>
-                <li><a href="productos.html">Productos y Galeria</a></li>
-                <li><a href="servicios.html">Servicios</a></li>
-            </ul>
-        </nav>
+
+
+
+
+
+
     </header>
-       <h1>CONTACTANOS</h1>
-       <p>Necesitas algun arreglo o mejora en tu vehiculo? Contactate con nosotros a traves de estos medios.</p>
 
-    <!--parte candela -->
+    <!--de aca para abajo no hagas nada -->
     <main class="grid-container">
         <div class="contacto">
             <h3>Visítanos</h3>
-            <img src="galeria/ubicacion.jpeg" alt="Ubicación" width="80" height="80">
+            <img src="galeria/ubicacion.jpeg" alt="Ubicación" width="90" height="90">
             <button class="boton-le">
                 <p><a href="Int. Nordenstrom 925">Int. Nordenstrom 925</a></p>
             </button>
         </div>
         <div class="contacto">
          <h3>Llamanos</h3>
-            <img src="galeria/icono-telefono-rojo-png-whatsapp-logo-red-11562862504g1ozq1wfuy.png" alt="telefono" width="80" height="80">
+            <img src="galeria/icono-telefono-rojo-png-whatsapp-logo-red-11562862504g1ozq1wfuy.png" alt="telefono" width="90" height="90">
                 <button class="boton-le">
                        <p><a href="+54  0299 15-530-8980"> 0299 15-530-8980</a></p>
                 </button>
         </div>    
         <div class="contacto">
          <h3>Escríbinos</h3>
-            <img src="galeria/617616eaa2cb8cdf5fe02dfde88632de.jpg" alt="Correo" width="90" height="80">
+            <img src="galeria/617616eaa2cb8cdf5fe02dfde88632de.jpg" alt="Correo" width="90" height="90">  
                <button class="boton-le">
                       <p><a href="raularnol@yahoo.com">raularnol@yahoo.com</a></p>
               </button>
