--- a/servicios.html
+++ b/servicios.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>servicios</title>
+    <link rel="stylesheet" href="serviciosstyle.css">
 </head>
 <body>
         <header>
