--- a/servicios.html
+++ b/servicios.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
-<html lang="es-ar">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>servicios</title>
+    <title>HR Turbos - Taller Mecánico</title>
     <link rel="stylesheet" href="serviciosstyle.css">
 </head>
 <body>
-        <header>
+    <header>
         <div class="logo">
-            <img src="galeria/logo.png" alt="HR Turbos">
+            <img src="galeria/logo.png" alt="Logotipo de HR Turbos" width="100px" height="120px">
         </div>
 
-        <nav id="navegación">
+        <nav id="navegacion">
             <ul>
                 <li><a href="index.html" class="activo">Inicio</a></li>
-                <li><a href="productos.html">Productos y Galeria</a></li>
+                <li><a href="productos.html">Productos y Galería</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="servicios.html">Servicios</a></li>
             </ul>
         </nav>
     </header>
- <main>
+
+    <main>
         <h1>Taller Mecánico "HR Turbos"</h1>
         <p>Centrado en la reparación y venta de turbos.</p>
 
@@ -56,6 +58,7 @@
                 </p>
             </article>
         </section>
+
         <section id="servicios">
             <h2>Servicios</h2>
             <ul>
@@ -64,6 +67,7 @@
                 <li>Cambio de aceite y filtro al vehículo al extraer o colocar el turbo</li>
             </ul>
         </section>
+
         <section id="diagnostico">
             <h2>Diagnóstico y Presupuesto</h2>
             <p>
@@ -89,7 +93,9 @@
                 No realizamos reparaciones que no estén relacionadas con el turbo.
             </p>
         </section>
-        <footer id="footer">
+    </main>
+
+    <footer id="footer">
         <p>&copy; 2025 HR Turbos. Todos los derechos reservados.</p>
         <address>
             <p>
@@ -98,7 +104,5 @@
             </p>
         </address>
     </footer>
-
-    </main>
-    </body>
+</body>
 </html>
