Agregando etiqueta div en body

--- a/productos.html
+++ b/productos.html
@@ -7,74 +7,75 @@
     <link rel="stylesheet" href="productos.css">
 </head>
 <body>
-    <header>
-        <div class="logo">
-            <img src="galeria/logo.png" alt="HR Turbos" height="180" width="350">
-        </div>
+    <div>
+        <header>
+            <div class="logo">
+                <img src="galeria/logo.png" alt="HR Turbos" height="180" width="350">
+            </div>
 
-        <nav id="navegación">
-            <ul>
-                <li><a href="index.html" class="activo">Inicio</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-                <li><a href="servicios.html">Servicios</a></li>
-            </ul>
-        </nav>
-    </header>
+            <nav id="navegación">
+                <ul>
+                    <li><a href="index.html" class="activo">Inicio</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                    <li><a href="servicios.html">Servicios</a></li>
+                </ul>
+            </nav>
+        </header>
 
-    <h1>Productos y galeria</h1>
+        <h1>Productos y galeria</h1>
 
-    <main id="main">
-        <h2> Galería </h2>
-        <article class="taller">
-            <img src="galeria/IMG-20250823-WA0004.jpg" alt="vista1" height="640" width="360">
-            <p>Primer vista del taller desde arriba.</p>
-        </article>
-         <article class="taller">
-            <img src="galeria/IMG-20250823-WA0008.jpg" alt="vista3" height="640" width="360">
-            <p> Así se ve nuestro lugar de trabajo </p>
-        </article>
-        <article class="taller">
-            <img src="galeria/IMG-20250823-WA0007.jpg" alt="vista2" height="360" width="640">
-            <p>Segunda vista del taller desde arriba.</p>
-        </article>
-        <article class="taller">
-            <img src="galeria/IMG-20250823-WA0010.jpg" alt="vista4" height="360" width="640">
-            <p> Algunos de nuestros productos</p>
-        </article>
-        <article class="taller">
-            <img src="galeria/Imagen de WhatsApp 2025-08-22 a las 18.05.34_57eb51da.jpg" alt="vista5" height="360" width="640">
-            <p> Reparación de turbo </p>
-        </article>
+        <main id="main">
+            <h2> Galería </h2>
+            <article class="taller">
+                <img src="galeria/IMG-20250823-WA0004.jpg" alt="vista1" height="640" width="360">
+                <p>Primer vista del taller desde arriba.</p>
+            </article>
+            <article class="taller">
+                <img src="galeria/IMG-20250823-WA0008.jpg" alt="vista3" height="640" width="360">
+                <p> Así se ve nuestro lugar de trabajo </p>
+            </article>
+            <article class="taller">
+                <img src="galeria/IMG-20250823-WA0007.jpg" alt="vista2" height="360" width="640">
+                <p>Segunda vista del taller desde arriba.</p>
+            </article>
+            <article class="taller">
+                <img src="galeria/IMG-20250823-WA0010.jpg" alt="vista4" height="360" width="640">
+                <p> Algunos de nuestros productos</p>
+            </article>
+            <article class="taller">
+                <img src="galeria/Imagen de WhatsApp 2025-08-22 a las 18.05.34_57eb51da.jpg" alt="vista5" height="360" width="640">
+                <p> Reparación de turbo </p>
+            </article>
 
-        <section>
-            <h2> Productos </h2>
-            <img src="galeria/turbo2_ford_ranger_3.2.jpg" alt="turbo1" height="250" width="240">
-            <p> Turbo Ford Ranger 3.2</p>
-            <img src="galeria/turbo_chevrolet_s10_2.8.jpg" alt="turbo2" height="250" width="250">
-            <p> Turbo Chevrolet S10 2.8 </p>
-            <img src="galeria/turbo_mercedesBenz_1518.jpg" alt="turbo3" height="250" width="260">
-            <p> Turbo Mercedes Benz 1518 </p>
-            <img src="galeria/turbo_nissan_frontier_2.3.jpg" alt="turbo4" height="250" width="320">
-            <p> Turbo Nissan Frontier 2.3 </p>
-            <img src="galeria/turbo_toyota_hilux_3.0.jpg" alt="turbo5" height="250" width="290">
-            <p> Turbo Toyota Hilux 3.0 </p>
-            <img src="galeria/turbo_volkswagen_vento2.0.jpg" alt="turbo6" height="250" width="300">
-            <p> Turbo Volkswagen Vento 2.0 </p>
-        </section>
+            <section>
+                <h2> Productos </h2>
+                <img src="galeria/turbo2_ford_ranger_3.2.jpg" alt="turbo1" height="250" width="240">
+                <p> Turbo Ford Ranger 3.2</p>
+                <img src="galeria/turbo_chevrolet_s10_2.8.jpg" alt="turbo2" height="250" width="250">
+                <p> Turbo Chevrolet S10 2.8 </p>
+                <img src="galeria/turbo_mercedesBenz_1518.jpg" alt="turbo3" height="250" width="260">
+                <p> Turbo Mercedes Benz 1518 </p>
+                <img src="galeria/turbo_nissan_frontier_2.3.jpg" alt="turbo4" height="250" width="320">
+                <p> Turbo Nissan Frontier 2.3 </p>
+                <img src="galeria/turbo_toyota_hilux_3.0.jpg" alt="turbo5" height="250" width="290">
+                <p> Turbo Toyota Hilux 3.0 </p>
+                <img src="galeria/turbo_volkswagen_vento2.0.jpg" alt="turbo6" height="250" width="300">
+                <p> Turbo Volkswagen Vento 2.0 </p>
+            </section>
 
-        <section id="animaciones">
-            <div class="animacion-turbo1"></div>
-            <div class="animacion-turbo2"></div>
-            <div class="animacion-turbo3"></div>
-        </section>
-    </main>
-    <footer id="footer">
-        <p>&copy; 2025 HR Turbos. Todos los derechos reservados.</p>
-        <p>
-            <a href="raularnol@yahoo.com">raularnol@yahoo.com</a> | 
-            <a href="tel:+5492995308980">+54 9 299 530-8980</a>
-        </p>
-    </footer>
-
+            <section id="animaciones">
+                <div class="animacion-turbo1"></div>
+                <div class="animacion-turbo2"></div>
+                <div class="animacion-turbo3"></div>
+            </section>
+        </main>
+        <footer id="footer">
+            <p>&copy; 2025 HR Turbos. Todos los derechos reservados.</p>
+            <p>
+                <a href="raularnol@yahoo.com">raularnol@yahoo.com</a> | 
+                <a href="tel:+5492995308980">+54 9 299 530-8980</a>
+            </p>
+        </footer>
+    </div>
 </body>
 </html>
