--- a/productos.html
+++ b/productos.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>
-        <header>
+        <header id="encabezado">
             <div class="logo">
                 <img src="galeria/logo.png" alt="HR Turbos" height="180" width="350">
             </div>
