Agregando etiqueta div a main

--- a/productos.html
+++ b/productos.html
@@ -26,26 +26,28 @@
 
         <main id="main">
             <h2> Galería </h2>
-            <article class="taller">
-                <img src="galeria/IMG-20250823-WA0004.jpg" alt="vista1" height="640" width="360">
-                <p>Primer vista del taller desde arriba.</p>
-            </article>
-            <article class="taller">
-                <img src="galeria/IMG-20250823-WA0008.jpg" alt="vista3" height="640" width="360">
-                <p> Así se ve nuestro lugar de trabajo </p>
-            </article>
-            <article class="taller">
-                <img src="galeria/IMG-20250823-WA0007.jpg" alt="vista2" height="360" width="640">
-                <p>Segunda vista del taller desde arriba.</p>
-            </article>
-            <article class="taller">
-                <img src="galeria/IMG-20250823-WA0010.jpg" alt="vista4" height="360" width="640">
-                <p> Algunos de nuestros productos</p>
-            </article>
-            <article class="taller">
-                <img src="galeria/Imagen de WhatsApp 2025-08-22 a las 18.05.34_57eb51da.jpg" alt="vista5" height="360" width="640">
-                <p> Reparación de turbo </p>
-            </article>
+            <div>
+                <article class="taller">
+                    <img src="galeria/IMG-20250823-WA0004.jpg" alt="vista1" height="640" width="360">
+                    <p>Primer vista del taller desde arriba.</p>
+                </article>
+                <article class="taller">
+                    <img src="galeria/IMG-20250823-WA0008.jpg" alt="vista3" height="640" width="360">
+                    <p> Así se ve nuestro lugar de trabajo </p>
+                </article>
+                <article class="taller">
+                    <img src="galeria/IMG-20250823-WA0007.jpg" alt="vista2" height="360" width="640">
+                    <p>Segunda vista del taller desde arriba.</p>
+                </article>
+                <article class="taller">
+                    <img src="galeria/IMG-20250823-WA0010.jpg" alt="vista4" height="360" width="640">
+                    <p> Algunos de nuestros productos</p>
+                </article>
+                <article class="taller">
+                    <img src="galeria/Imagen de WhatsApp 2025-08-22 a las 18.05.34_57eb51da.jpg" alt="vista5" height="360" width="640">
+                    <p> Reparación de turbo </p>
+                </article>
+            </div>
 
             <section>
                 <h2> Productos </h2>
