--- a/productos.html
+++ b/productos.html
@@ -14,7 +14,7 @@
             </div>
 
             <nav id="navegación">
-                <ul>
+                <ul id="lista">
                     <li><a href="index.html" class="activo">Inicio</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
                     <li><a href="servicios.html">Servicios</a></li>
