Agregando etiqueta div con class a main

--- a/productos.html
+++ b/productos.html
@@ -26,7 +26,7 @@
 
         <main id="main">
             <h2> Galería </h2>
-            <div>
+            <div class="galeria">
                 <article class="taller">
                     <img src="galeria/IMG-20250823-WA0004.jpg" alt="vista1" height="640" width="360">
                     <p>Primer vista del taller desde arriba.</p>
@@ -47,7 +47,7 @@
                     <img src="galeria/Imagen de WhatsApp 2025-08-22 a las 18.05.34_57eb51da.jpg" alt="vista5" height="360" width="640">
                     <p> Reparación de turbo </p>
                 </article>
-            
+            </div>
 
             <section class="turbos">
                     <h2> Productos </h2>
